--- a/Back/code/src/locales/es.json
+++ b/Back/code/src/locales/es.json
@@ -7,5 +7,11 @@
   "invalidPassword": "La contraseña es errónea",
   "invalidUser": "Usuario no válido",
   "invalidPassword2": "Contraseña inválida",
-  "clientNonExist": "El cliente no existe"
+  "clientNonExist": "El cliente no existe",
+  "noManagerGetCampaign": "No se pueden obtener campañas de las que no se es gestor",
+  "clientNonExist2": "El cliente introducido no existe",
+  "campaignIdRequired": "El identificador de campaña es obligatorio",
+  "campaignNotFound": "Campaña no encontrada",
+  "clientExist": "Ya existe este cliente",
+  "userNotFound": "Usuario no encontrado"
 }
