FEAT: translation of active account mail

--- a/Back/code/src/locales/en.json
+++ b/Back/code/src/locales/en.json
@@ -2,6 +2,9 @@
   "errorMailPassword": "The email and password entered are not valid",
   "lockedAccount": "The account has been blocked and an email has been sent to unblock it",
   "unlockedMailTitle": "Unlock your account",
+  "activeSubject": "Active account",
+  "activeMailTitle": "Active your account",
+  "activeMailMessage": "Thanks for trusting us. Click on the following link to activate your account.",
   "unlockSubject": "Unlock your account",
   "unlockedAccountcheckMail": "This account is locked. Check your email inbox",
   "invalidPassword": "The password is wrong",
