--- a/Back/code/src/locales/es.json
+++ b/Back/code/src/locales/es.json
@@ -2,6 +2,9 @@
   "errorMailPassword": "El email y la contraseña introducidos no son válidos",
   "lockedAccount": "La cuenta ha sido bloqueada y se ha enviado un correo para desbloquearla",
   "unlockedMailTitle": "Desbloqueo de cuenta",
+  "activeSubject": "Activar cuenta",
+  "activeMailTitle": "Activa tu cuenta",
+  "activeMailMessage": "Gracias por confiar en nosotros.Pulse en el siguiente enlace para activar tu cuenta.",
   "unlockSubject": "Desbloquear cuenta",
   "unlockedAccountcheckMail": "Esta cuenta esta bloqueada. Revisa la bandeja de entrada de tu correo",
   "invalidPassword": "La contraseña es errónea",
