FIX: integrate language inside sendActivateEmail and move emails template to specific folder

--- a/Back/code/src/locales/en.json
+++ b/Back/code/src/locales/en.json
@@ -16,5 +16,6 @@
   "campaignIdRequired": "Campaign ID is required",
   "campaignNotFound": "Campaign not found",
   "clientExist": "This client already exists",
-  "userNotFound": "User not found"
+  "userNotFound": "User not found",
+  "activeButtonText": "Active your account"
 }
