--- a/Back/code/src/locales/en.json
+++ b/Back/code/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "errorMailPassword": "The email and password entered are not valid",
+  "errorMailPassword": "The email or password entered are not valid",
   "lockedAccount": "The account has been blocked and an email has been sent to unblock it",
   "unlockedMailTitle": "Unlock your account",
   "activeSubject": "Active account",
@@ -7,10 +7,10 @@
   "activeMailMessage": "Thanks for trusting us. Click on the following link to activate your account.",
   "unlockSubject": "Unlock your account",
   "unlockedAccountcheckMail": "This account is locked. Check your email inbox",
-  "invalidPassword": "The password is wrong",
+  "invalidPassword": "The email or password entered are not valid",
   "invalidUser": "Invalid user",
   "invalidPassword2": "Invalid password",
-  "clientNonExist": "the client does not exist",
+  "clientNonExist": "The client does not exist",
   "noManagerGetCampaign": "You cannot obtain campaigns of which you are not a manager",
   "clientNonExist2": "The customer entered does not exist",
   "campaignIdRequired": "Campaign ID is required",
