--- a/Back/code/src/locales/es.json
+++ b/Back/code/src/locales/es.json
@@ -38,5 +38,5 @@
 	"recoverMailMessage": "Pulse en el siguiente enlace para recuperar tu contraseña.",
 	"recoverButtonText": "Recuperar contraseña",
 	"inactiveUser": "Tu usuario no esta activo. Por favor, revisa tu correo electrónico",
-	"unlockMailTitle": "unlockMailTitle"
+	"unlockMailTitle": "Desbloquea tu cuenta"
 }
