--- a/Back/code/src/locales/es.json
+++ b/Back/code/src/locales/es.json
@@ -38,5 +38,12 @@
 	"recoverMailMessage": "Pulse en el siguiente enlace para recuperar tu contraseña.",
 	"recoverButtonText": "Recuperar contraseña",
 	"inactiveUser": "Tu usuario no esta activo. Por favor, revisa tu correo electrónico",
-	"unlockMailTitle": "Desbloquea tu cuenta"
+	"unlockMailTitle": "Desbloquea tu cuenta", 
+	"passwordIncludeEmail": "La contraseña no puede contener ninguna parte del email",
+	"minPasswordLength" : "La contraseña debe contener al menos 9 caracteres",
+	"passwordNotIncludeNumber" : "La contraseña debe incluir un número",
+	"passwordNotIncludeLowercase": "La contraseña no incluye una letra en minúscula",
+	"passwordNotIncludeUppercase": "La contraseña no incluye una letra en mayúscula",
+	"passwordNotIncludeSymbol" : "La contraseña no incluye un símbolo"
+
 }
