--- a/Back/code/src/locales/es.json
+++ b/Back/code/src/locales/es.json
@@ -44,6 +44,12 @@
 	"passwordNotIncludeNumber" : "La contraseña debe incluir un número",
 	"passwordNotIncludeLowercase": "La contraseña no incluye una letra en minúscula",
 	"passwordNotIncludeUppercase": "La contraseña no incluye una letra en mayúscula",
-	"passwordNotIncludeSymbol" : "La contraseña no incluye un símbolo"
+	"passwordNotIncludeSymbol" : "La contraseña no incluye un símbolo",
+	"resetPasswordUsed": "El token ya se ha usado o se ha generado uno nuevo",
+	"resetPasswordInvalid": "El token ha expirado o es invalido",
+	"passwordHistoryNotFound": "Historial de contraseña no encontrado",
+	"passwordHistoryNotUpdated": "Historial de contraseña no se ha podido actualizar",
+	"passwordUsed": "Esta contraseña ya ha sido usada"
+	
 
 }
